objects/Request__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a set of features that provides the ability to handle a capability.</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adapt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Adaptation and Ongoing Support.</description>
        <inlineHelpText>Number of days estimated for Adaptation and Ongoing Support.</inlineHelpText>
        <label>Adapt &amp; Ongoing Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete Build and Unit Test phase.</description>
        <inlineHelpText>Number of days estimated to complete Build and Unit Test phase.</inlineHelpText>
        <label>Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for build of the request</description>
        <label>Build Total</label>
        <summarizedField>Application_Inventory__c.Total_Build__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Benefit_Value__c</fullName>
        <description>Value is calculated by the selection of the Business Benefit field.</description>
        <formula>CASE( 
Business_Benefit__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Business Benefit field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Business Benefit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <description>Shows type of benefit which business is going to have from the request</description>
        <inlineHelpText>Low: Does Not Drive Revenue or Reduce Costs 
Medium: Drives Revenue or Reduces Costs (quantify amount, if possible) 
High: Drives Revenue and Reduces Costs (quantify amount for both, if possible)</inlineHelpText>
        <label>Business Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Value_Details__c</fullName>
        <description>This is a Required Field for scoping.  Includes the details of why this request would be implemented, and the expected business value</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is a Required Field for scoping.  Includes the details of why this request would be implemented, and the expected business value</inlineHelpText>
        <label>Business Value Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Capability_MVP__c</fullName>
        <formula>Capability__r.MVP__c</formula>
        <label>Capability MVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capability related to the request</description>
        <label>Capability</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose a sub-capability.</errorMessage>
            <filterItems>
                <field>Capability__c.Sub_Capability__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity_Type__c</fullName>
        <description>Category of the request</description>
        <inlineHelpText>Emergency: A known error in existing functionality 
Feature/Function: Enhancement or modification to an existing functionality 
New Capability: New functionality to support process 
Ongoing Maintenance: Activities that need to be performed regularly</inlineHelpText>
        <label>Capacity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Feature/Function</fullName>
                </value>
                <value>
                    <fullName>New Capability</fullName>
                </value>
                <value>
                    <fullName>Ongoing Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capture_Mode__c</fullName>
        <label>Capture Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Request_ID__c</fullName>
        <description>Shows Client Request ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Request ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Deferred__c</fullName>
        <description>Reason of closing or deferring the request</description>
        <label>Reason Closed/Deferred</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deferred: Waiting Architecture Availabiity</fullName>
                </value>
                <value>
                    <fullName>Deferred: Product Enhancement Request</fullName>
                </value>
                <value>
                    <fullName>Deferred: Waiting Approval</fullName>
                </value>
                <value>
                    <fullName>Closed: Architecturally Not Recommended</fullName>
                </value>
                <value>
                    <fullName>Closed: Satisfied Through Business Process Change</fullName>
                </value>
                <value>
                    <fullName>Closed: Canceled by Business</fullName>
                </value>
                <value>
                    <fullName>Closed: Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed: Technically Not Feasible</fullName>
                </value>
                <value>
                    <fullName>Closed: Existing Functionality</fullName>
                </value>
                <value>
                    <fullName>Deferred: Aligned to Future State Capabilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Details of the reason of closing or deferring the request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Closed/Deferred Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cont__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overall Contingency allowed.</description>
        <inlineHelpText>Overall Contingency allowed in percentage.</inlineHelpText>
        <label>Overall Contingency(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country name for Request</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_On_Approve_Approved_to_Deploy__c</fullName>
        <formula>( TimeSpentOn_Approved_to_Deploy__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approve: Approved to Deploy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Approved_Emergency_Release__c</fullName>
        <formula>( TimeSpentOn_Approved_Emergency_Release__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Approved Emergency Release</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Close_Deployed__c</fullName>
        <formula>( TimeSpentOn_Deployed__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close: Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Close_Duplicate__c</fullName>
        <formula>( TimeSpentOn_Duplicate__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close: Duplicate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Close_Rejected__c</fullName>
        <formula>( TimeSpentOn_Rejected__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close: Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Consolidate_Approve_to_Estimate__c</fullName>
        <formula>( TimeSpentOn_Approve_to_Estimate__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consolidate: Approve to Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Identify_Change_Request__c</fullName>
        <formula>(TimeSpentOn_Identify_Change_Request__c/(24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Identify: Change Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Identify_Deferred__c</fullName>
        <formula>( TimeSpentOn_Deferred__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify: Deferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Identify_Emergency_Request__c</fullName>
        <formula>( TimeSpentOn_Emergency_Request__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Identify: Emergency Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Identify_New_Requirement__c</fullName>
        <formula>(TimeSpentOn_Identify_New_Requirement__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify: New Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Level_of_Effort_Complete__c</fullName>
        <formula>( TimeSpentOn_Level_of_Effort_Complete__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Effort Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Build_Production__c</fullName>
        <formula>( TimeSpentOn_Build_Production__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Build Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Build__c</fullName>
        <formula>( TimeSpentOn_Build__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Design__c</fullName>
        <formula>( TimeSpentOn_Design__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_No_Build_Req__c</fullName>
        <formula>( TimeSpentOn_No_Build_Req__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Release: No Build Req</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_SIT__c</fullName>
        <formula>( TimeSpentOn_SIT__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: SIT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Test_Production__c</fullName>
        <formula>( TimeSpentOn_Test_Production__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Test Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_Test__c</fullName>
        <formula>( TimeSpentOn_Test__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Release_UAT__c</fullName>
        <formula>( TimeSpentOn_UAT__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release: UAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Submit_for_Business_Review__c</fullName>
        <formula>( TimeSpentOn_Submit_for_Business_Review__c / (24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit for Business Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Status__c</fullName>
        <label>Demo Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Can Demo</fullName>
                </value>
                <value>
                    <fullName>Redo Demo</fullName>
                </value>
                <value>
                    <fullName>Demo Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Des__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for the Design phase.</description>
        <inlineHelpText>Number of days estimated for the Design phase.</inlineHelpText>
        <label>Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for design of the request</description>
        <label>Design Total</label>
        <summarizedField>Application_Inventory__c.Total_Design__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DeveloperAssigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimate_Assumption__c</fullName>
        <description>Any assumptions which were taken during the estimations for the request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimate Assumption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimate_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimate Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exists_in_Current_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exists in Current Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fit_Gap_Status__c</fullName>
        <label>Fit/Gap Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>For Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fit_or_Gap__c</fullName>
        <label>Fit/Gap?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fit</fullName>
                </value>
                <value>
                    <fullName>Gap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Description__c</fullName>
        <description>Functional Description of the request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Include information about the impacts the functionality will have to the end user. Specifically, what they will see on the interface, how often the data will be updated, etc.</inlineHelpText>
        <label>Functional Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap_Difficulty__c</fullName>
        <label>Gap Difficulty?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gap_Object__c</fullName>
        <label>Gap Area?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Current System Configuration</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>SFDC Configuration</fullName>
                </value>
                <value>
                    <fullName>Workflows</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gap_Priority__c</fullName>
        <label>Gap Priority?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Must Have</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Assessment__c</fullName>
        <inlineHelpText>Outcome from Initial Assessment.</inlineHelpText>
        <label>Initial Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workaround available</fullName>
                </value>
                <value>
                    <fullName>Solution available</fullName>
                </value>
                <value>
                    <fullName>No current solution or workaround available.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_3_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Level 3 Process</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort_Value__c</fullName>
        <description>Value is calculated by the Level of Effort formula field</description>
        <formula>if(Level_of_Effort__c = &quot;High&quot;,1, 
if(Level_of_Effort__c = &quot;Medium&quot;,2, 
If(Level_of_Effort__c = &quot;Low&quot;,3, 
0)))</formula>
        <inlineHelpText>Value is calculated by the Level of Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>Level of Effort Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>Shows the category of level of effort required for the request based on total estimate for the request</description>
        <formula>IF(TotEst__c = 0.00, &quot;N/A&quot;, 
IF(TotEst__c &lt;= 8.00, &quot;Low&quot;, 
IF(TotEst__c &gt; 20.00, &quot;High&quot;, 
&quot;Medium&quot;)))</formula>
        <inlineHelpText>Low: Requires Less Than 8 Days of Work Effort 
Medium: Requires 8.01 - 20 Days of Work Effort 
High: Requires More Than 20.01 Days of Work Effort</inlineHelpText>
        <label>Level of Effort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label># of Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Shore_Estimate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>In days</inlineHelpText>
        <label>On-Shore Estimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Gap_Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Gap Area?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Priority__c</fullName>
        <description>Shows the priority of the request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Value is calculated based on the value in the Total Priority Ranking field: 
High = Any value greater than or equal to 2.50 
Medium = Any value between 1.50 and 2.49 
Low = Any value less than 1.50</inlineHelpText>
        <label>Overall Priority</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Request_Title__c</fullName>
        <formula>Parent_Request__r.Request_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Request Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Any related request to the request</description>
        <inlineHelpText>Track Parent / Child Requirement relationships. Also use to relate a Duplicate with the Open Request.</inlineHelpText>
        <label>Parent Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_Build_Complete__c</fullName>
        <label>Percentage Build Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates each request to a Release or Project.</description>
        <inlineHelpText>This is the suggested release in which the requirement should be deployed.</inlineHelpText>
        <label>Planned Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Flow_Step__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Flow Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product Feature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC Automation</fullName>
                </value>
                <value>
                    <fullName>SFDC Platform</fullName>
                </value>
                <value>
                    <fullName>SFDC Shield</fullName>
                </value>
                <value>
                    <fullName>Vlocity Benefits Onboarding</fullName>
                </value>
                <value>
                    <fullName>Vlocity Cards</fullName>
                </value>
                <value>
                    <fullName>Vlocity CLM</fullName>
                </value>
                <value>
                    <fullName>Vlocity OmniScript</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promoted_to_Environment__c</fullName>
        <label>Promoted to Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proto</fullName>
                </value>
                <value>
                    <fullName>Config</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Smoke</fullName>
                </value>
                <value>
                    <fullName>Prod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quick_Hit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks whether the request is quick hit or not</description>
        <inlineHelpText>A request can only be a quick hit if the IT level of effort is “low”, Business priority is “high”, the urgency of having the request is immediate, and the request can be implemented without impacting integration.</inlineHelpText>
        <label>Quick Hit</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>